--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_CLIENT_ID=bdccabf7a8dfffb8de6b
+GITHUB_CLIENT_SECRET=a5b2e2187c48881dd1bf1488e3a605097d1a859f
